// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createServiceBusNamespaceEntity properties transferred 1`] = `
{
  "_class": [
    "Service",
  ],
  "_key": "/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "createdAt": 2020-09-15T19:29:34.723Z,
        "id": "/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev",
        "location": "East US",
        "metricId": "d3803fd6-2ba4-4286-80aa-f3d613ad59a7:ndowmon1j1dev",
        "name": "ndowmon1j1dev",
        "provisioningState": "Succeeded",
        "serviceBusEndpoint": "https://ndowmon1j1dev.servicebus.windows.net:443/",
        "sku": {
          "name": "Standard",
          "tier": "Standard",
        },
        "tags": {},
        "type": "Microsoft.ServiceBus/Namespaces",
        "updatedAt": 2020-09-15T19:30:18.757Z,
      },
    },
  ],
  "_type": "azure_service_bus_namespace",
  "category": [
    "infrastructure",
  ],
  "createdOn": 1600198174723,
  "displayName": "ndowmon1j1dev",
  "function": [
    "event-delivery",
  ],
  "id": "/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev",
  "location": "East US",
  "metricId": "d3803fd6-2ba4-4286-80aa-f3d613ad59a7:ndowmon1j1dev",
  "name": "ndowmon1j1dev",
  "provisioningState": "Succeeded",
  "serviceBusEndpoint": "https://ndowmon1j1dev.servicebus.windows.net:443/",
  "type": "Microsoft.ServiceBus/Namespaces",
  "webLink": "https://portal.azure.com/#@something.onmicrosoft.com/resource/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev",
}
`;

exports[`createServiceBusQueueEntity properties transferred 1`] = `
{
  "_class": [
    "Queue",
  ],
  "_key": "/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev/queues/j1dev-queue",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "accessedAt": 0001-01-01T00:00:00.000Z,
        "autoDeleteOnIdle": "P10675199DT2H48M5.4775807S",
        "countDetails": {
          "activeMessageCount": 0,
          "deadLetterMessageCount": 0,
          "scheduledMessageCount": 0,
          "transferDeadLetterMessageCount": 0,
          "transferMessageCount": 0,
        },
        "createdAt": 2020-09-15T19:34:09.849Z,
        "deadLetteringOnMessageExpiration": false,
        "defaultMessageTimeToLive": "P10675199DT2H48M5.4775807S",
        "duplicateDetectionHistoryTimeWindow": "PT10M",
        "enableBatchedOperations": true,
        "enableExpress": false,
        "enablePartitioning": false,
        "id": "/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev/queues/j1dev-queue",
        "location": "East US",
        "lockDuration": "PT1M",
        "maxDeliveryCount": 10,
        "maxSizeInMegabytes": 10240,
        "messageCount": 0,
        "name": "j1dev-queue",
        "requiresDuplicateDetection": false,
        "requiresSession": false,
        "sizeInBytes": 0,
        "status": "Active",
        "type": "Microsoft.ServiceBus/Namespaces/Queues",
        "updatedAt": 2020-09-15T19:34:09.849Z,
      },
    },
  ],
  "_type": "azure_service_bus_queue",
  "active": true,
  "autoDeleteOnIdle": "P10675199DT2H48M5.4775807S",
  "createdOn": 1600198449849,
  "deadLetteringOnMessageExpiration": false,
  "defaultMessageTimeToLive": "P10675199DT2H48M5.4775807S",
  "displayName": "j1dev-queue",
  "duplicateDetectionHistoryTimeWindow": "PT10M",
  "enableBatchedOperations": true,
  "enableExpress": false,
  "enablePartitioning": false,
  "id": "/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev/queues/j1dev-queue",
  "location": "East US",
  "lockDuration": "PT1M",
  "maxDeliveryCount": 10,
  "maxSizeInMegabytes": 10240,
  "messageCount": 0,
  "name": "j1dev-queue",
  "requiresDuplicateDetection": false,
  "requiresSession": false,
  "sizeInBytes": 0,
  "status": "Active",
  "type": "Microsoft.ServiceBus/Namespaces/Queues",
  "webLink": "https://portal.azure.com/#@something.onmicrosoft.com/resource/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev/queues/j1dev-queue",
}
`;

exports[`createServiceBusSubscriptionEntity properties transferred 1`] = `
{
  "_class": [
    "Subscription",
  ],
  "_key": "/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev/topics/j1dev-topic/subscriptions/j1dev",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "accessedAt": 2020-09-15T19:39:49.670Z,
        "autoDeleteOnIdle": "P10675199DT2H48M5.4775807S",
        "countDetails": {
          "activeMessageCount": 0,
          "deadLetterMessageCount": 0,
          "scheduledMessageCount": 0,
          "transferDeadLetterMessageCount": 0,
          "transferMessageCount": 0,
        },
        "createdAt": 2020-09-15T19:39:49.670Z,
        "deadLetteringOnFilterEvaluationExceptions": true,
        "deadLetteringOnMessageExpiration": false,
        "defaultMessageTimeToLive": "P10675199DT2H48M5.4775807S",
        "enableBatchedOperations": false,
        "id": "/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev/topics/j1dev-topic/subscriptions/j1dev",
        "location": "East US",
        "lockDuration": "PT1M",
        "maxDeliveryCount": 1,
        "messageCount": 0,
        "name": "j1dev",
        "requiresSession": false,
        "status": "Active",
        "type": "Microsoft.ServiceBus/Namespaces/Topics/Subscriptions",
        "updatedAt": 2020-09-15T19:39:49.670Z,
      },
    },
  ],
  "_type": "azure_service_bus_subscription",
  "active": true,
  "autoDeleteOnIdle": "P10675199DT2H48M5.4775807S",
  "createdOn": 1600198789670,
  "deadLetteringOnFilterEvaluationExceptions": true,
  "deadLetteringOnMessageExpiration": false,
  "defaultMessageTimeToLive": "P10675199DT2H48M5.4775807S",
  "displayName": "j1dev",
  "enableBatchedOperations": false,
  "id": "/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev/topics/j1dev-topic/subscriptions/j1dev",
  "location": "East US",
  "lockDuration": "PT1M",
  "maxDeliveryCount": 1,
  "messageCount": 0,
  "name": "j1dev",
  "requiresSession": false,
  "status": "Active",
  "type": "Microsoft.ServiceBus/Namespaces/Topics/Subscriptions",
  "webLink": "https://portal.azure.com/#@something.onmicrosoft.com/resource/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev/topics/j1dev-topic/subscriptions/j1dev",
}
`;

exports[`createServiceBusTopicEntity properties transferred 1`] = `
{
  "_class": [
    "Queue",
  ],
  "_key": "/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev/topics/j1dev-topic",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "accessedAt": 0001-01-01T00:00:00.000Z,
        "autoDeleteOnIdle": "P10675199DT2H48M5.4775807S",
        "countDetails": {
          "activeMessageCount": 0,
          "deadLetterMessageCount": 0,
          "scheduledMessageCount": 0,
          "transferDeadLetterMessageCount": 0,
          "transferMessageCount": 0,
        },
        "createdAt": 2020-09-15T19:34:08.916Z,
        "defaultMessageTimeToLive": "P10675199DT2H48M5.4775807S",
        "duplicateDetectionHistoryTimeWindow": "PT10M",
        "enableBatchedOperations": false,
        "enableExpress": false,
        "enablePartitioning": false,
        "id": "/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev/topics/j1dev-topic",
        "location": "East US",
        "maxSizeInMegabytes": 10240,
        "name": "j1dev-topic",
        "requiresDuplicateDetection": false,
        "sizeInBytes": 0,
        "status": "Active",
        "subscriptionCount": 0,
        "supportOrdering": false,
        "type": "Microsoft.ServiceBus/Namespaces/Topics",
        "updatedAt": 2020-09-15T19:34:08.916Z,
      },
    },
  ],
  "_type": "azure_service_bus_topic",
  "active": true,
  "autoDeleteOnIdle": "P10675199DT2H48M5.4775807S",
  "createdOn": 1600198448916,
  "defaultMessageTimeToLive": "P10675199DT2H48M5.4775807S",
  "displayName": "j1dev-topic",
  "duplicateDetectionHistoryTimeWindow": "PT10M",
  "enableBatchedOperations": false,
  "enableExpress": false,
  "enablePartitioning": false,
  "id": "/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev/topics/j1dev-topic",
  "location": "East US",
  "maxSizeInMegabytes": 10240,
  "name": "j1dev-topic",
  "requiresDuplicateDetection": false,
  "sizeInBytes": 0,
  "status": "Active",
  "subscriptionCount": 0,
  "supportOrdering": false,
  "type": "Microsoft.ServiceBus/Namespaces/Topics",
  "webLink": "https://portal.azure.com/#@something.onmicrosoft.com/resource/subscriptions/d3803fd6-2ba4-4286-80aa-f3d613ad59a7/resourceGroups/j1dev/providers/Microsoft.ServiceBus/namespaces/ndowmon1j1dev/topics/j1dev-topic",
}
`;
